TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "139542446400640" [label="Start"];
  "139542446400640" -> "139542446400160";
  "139542446400160" [label="Code"];
  "139542446400160" -> "139542446392384";
  "139542446392384" [label="Function"];
  "139542446392384" -> "139542446399824";
  "139542446392384" -> "139542446403952";
  "139542446392384" -> "139542446404480";
  "139542446399824" [label="main IDENTIFIER"];
  "139542446403952" [label="Parameters"];
  "139542446404480" [label="Code"];
  "139542446404480" -> "139542446393776";
  "139542446404480" -> "139542446403808";
  "139542446393776" [label="Assignment"];
  "139542446393776" -> "139542446400448";
  "139542446393776" -> "139542446394112";
  "139542446400448" [label="x IDENTIFIER"];
  "139542446394112" [label="5 INT"];
  "139542446403808" [label="Return"];
  "139542446403808" -> "139542446393008";
  "139542446393008" [label="0 INT"];
}
